Fixing some bugs
