# src/web-apps/mgmt-web/Pages/GameServers/Edit.cshtml.cs
@@ -35,9 +35,9 @@ public class EditModel : PageModel
         if (gameServer == null)
             return NotFound();
 
-        var rconPasswordSecret = await GetGameServerSecret(id, $"{id}-rconpassword");
-        var ftpUsernameSecret = await GetGameServerSecret(id, $"{id}-ftpusername");
-        var ftpPasswordSecret = await GetGameServerSecret(id, $"{id}-ftppassword");
+        var rconPasswordSecret = await GetGameServerSecret(id, "rconpassword");
+        var ftpUsernameSecret = await GetGameServerSecret(id, "ftpusername");
+        var ftpPasswordSecret = await GetGameServerSecret(id, "ftppassword");
 
         GameServerViewModel = new GameServerViewModel
         {
@@ -69,9 +69,9 @@ public class EditModel : PageModel
         gameServer.QueryPort = GameServerViewModel.QueryPort;
 
         await UpdateGameServer(gameServer);
-        await UpdateGameServerSecret(id, $"{id}-rconpassword", GameServerViewModel.RconPassword);
-        await UpdateGameServerSecret(id, $"{id}-ftpusername", GameServerViewModel.FtpUsername);
-        await UpdateGameServerSecret(id, $"{id}-ftppassword", GameServerViewModel.FtpPassword);
+        await UpdateGameServerSecret(id, "rconpassword", GameServerViewModel.RconPassword);
+        await UpdateGameServerSecret(id, "ftpusername", GameServerViewModel.FtpUsername);
+        await UpdateGameServerSecret(id, "ftppassword", GameServerViewModel.FtpPassword);
 
         return RedirectToPage("Index");
     }
@@ -139,14 +139,14 @@ public class EditModel : PageModel
     private async Task UpdateGameServerSecret(string id, string secret, string? secretValue)
     {
         var client = new RestClient(_configuration["apim-base-url"]);
-        var request = new RestRequest($"repository/GameServer/{id}/secrets/{secret}", Method.Patch);
+        var request = new RestRequest($"repository/GameServer/{id}/secrets/{secret}", Method.Post);
 
         string[] scopes = {_configuration["web-api-repository-scope"]};
         var accessToken = await _tokenAcquisition.GetAccessTokenForUserAsync(scopes);
 
         request.AddHeader("Ocp-Apim-Subscription-Key", _configuration["apim-subscription-key"]);
         request.AddHeader("Authorization", $"Bearer {accessToken}");
-        request.AddBody(secretValue);
+        request.AddBody(secretValue ?? "", "text/plain");
 
         await client.ExecuteAsync(request);
     }
